objects/CMPL123QMS__Nonconformance_Action__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Actions_Taken__c</fullName>
        <label>Actions Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Actions_Taken_to_Reinspect__c</fullName>
        <label>Actions Taken to Reinspect</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Actions_Taken_to_Rework__c</fullName>
        <label>Actions Taken to Rework</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To_Me__c</fullName>
        <formula>CMPL123QMS__Assigned_to__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Nonconformance_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Department__c</fullName>
        <label>Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CMPL123QMS__Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Impacted_Lot_Number__c</fullName>
        <label>Impacted Lot Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Impacted_Lot__c</fullName>
        <label>Impacted Lot</label>
        <referenceTo>CMPL123QMS__Impacted_Lot__c</referenceTo>
        <relationshipLabel>Nonconformance Actions</relationshipLabel>
        <relationshipName>Nonconformance_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Locations__c</fullName>
        <label>Locations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Production Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <referenceTo>CMPL123QMS__Material__c</referenceTo>
        <relationshipLabel>Nonconformance Actions</relationshipLabel>
        <relationshipName>Nonconformance_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Observations__c</fullName>
        <label>Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Salesforce's Product Object</description>
        <label>Product (SFDC)</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Nonconformance Actions</relationshipLabel>
        <relationshipName>Nonconformance_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Proposed_Actions_to_Reinspect__c</fullName>
        <label>Proposed Actions to Reinspect</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Proposed_Actions_to_Rework__c</fullName>
        <label>Proposed Actions to Rework</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Return_Qty__c</fullName>
        <label>Return Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Rework_Qty__c</fullName>
        <label>Rework  Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Scrap_Qty__c</fullName>
        <label>Scrap Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__TWD_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>Nonconformance Actions</relationshipLabel>
        <relationshipName>Nonconformance_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Nonconformance Action</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NA-{00000}</displayFormat>
        <label>Nonconformance Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nonconformance Actions</pluralLabel>
    <recordTypes>
        <fullName>CMPL123QMS__Containment</fullName>
        <active>true</active>
        <label>Containment</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123QMS__Escalated_Action</fullName>
        <active>true</active>
        <label>Escalated Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123QMS__Return</fullName>
        <active>true</active>
        <label>Return</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123QMS__Rework</fullName>
        <active>true</active>
        <label>Rework</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123QMS__Scrap</fullName>
        <active>true</active>
        <label>Scrap</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Due_Date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CMPL123QMS__Due_Date__c &lt; TODAY(), OR( ISNEW(), ISCHANGED(CMPL123QMS__Due_Date__c)))</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Due_Date__c</errorDisplayField>
        <errorMessage>Due Dates cannot be populated with a date in the past.</errorMessage>
    </validationRules>
</CustomObject>